--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ html, body {
     margin: 0;
     padding: 0;
 }
-
+/* 
 .sideWrap {
     width: 25vw;
     border-right: 1vw;
@@ -16,7 +16,8 @@ html, body {
     height: 100vh;
     background-color: rgba(46, 86, 131, 0.8);
     position: relative;
-}
+    
+} */
 /* .mainWrap {
     width: 75vw;
     border-left: .5vw ridge rgba(17, 60, 110, 0.6);
@@ -35,7 +36,7 @@ background: radial-gradient(ellipse at center, rgba(241,4,59,1) 0%, rgba(196,3,4
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1043b', endColorstr='#940023', GradientType=1 );
     position: absolute;
 } */
-
+/* 
 #showSideButton {
     position: fixed !important;
     top:0 !important;
@@ -43,9 +44,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1043b', end
     background-color: rgb(46, 86, 131) !important;
     color: white;
     z-index: 5 !important;
-}
+} */
 
-
+/* 
 
 .sideRow>div.col {
     margin-top: 0vh !important;
@@ -58,4 +59,4 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1043b', end
 .sidebarHeader {
     text-align: center;
 }
-
+ */
